Fixing pre rendering issues, adding ReadMe, and fixing p css to include more whitespace between paragraphs

--- a/css/gh-pages-blog.css
+++ b/css/gh-pages-blog.css
@@ -23,28 +23,5 @@
 
 .ghpb-post p {
   font-size: larger;
-}
-
-.ghpb-post a {
-}
-
-.ghpb-post a:hover {
-}
-
-.ghpb-post h2 a:hover {
-}
-
-.ghpb-nav-list a {
-}
-
-.ghpb-nav-list a:hover {
-}
-
-.ghpb-nav-list a:hover {
-}
-
-.ghpb a {
-}
-
-.ghpb a:hover {
+  margin-bottom: 20px;
 }
